--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "axios": "^1.7.2",
+    "@fortawesome/fontawesome-free": "^6.6.0",
+    "axios": "^1.7.7",
     "react-markdown": "^9.0.1",
     "remark-gfm": "^4.0.0"
   }
