Various fixes, sqlalchemy and login should work now, alembic still not working

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,105 +1,27 @@
 alembic==1.14.0
-arrow==1.3.0
-asgiref==3.8.1
-awscli==1.22.34
-Babel==2.8.0
--e git+ssh://git@github.com/winnieda/ColorVariantGenerator.git@f5d9a5801dc131e87d51fc65bc78a999f6f00836#egg=backend&subdirectory=backend
-bcrypt==4.2.0
-binaryornot==0.4.4
-blinker==1.8.2
-boto3==1.35.67
-botocore==1.35.67
-build==1.2.2.post1
-certifi==2024.8.30
-chardet==4.0.0
-charset-normalizer==3.4.0
+blinker==1.9.0
+cffi==1.17.1
 click==8.1.7
-colorama==0.4.4
-colorclass==2.2.2
-command-not-found==0.3
-cookiecutter==2.6.0
-cryptography==3.4.8
-dbus-python==1.2.18
-defusedxml==0.7.1
-distro==1.7.0
-distro-info==1.1+ubuntu0.2
-Django==5.1.3
-django-cors-headers==4.6.0
-djangorestframework==3.15.2
-docopt==0.6.2
-docutils==0.17.1
+cryptography==44.0.0
 exceptiongroup==1.2.2
-Flask==3.0.3
+Flask==3.1.0
 Flask-Cors==5.0.0
 Flask-Login==0.6.3
-Flask-Mail==0.10.0
 Flask-Migrate==4.0.7
 Flask-SQLAlchemy==3.1.1
 greenlet==3.1.1
-httpie==2.6.0
-httplib2==0.20.2
-idna==3.10
-importlib-metadata==4.6.4
 iniconfig==2.0.0
 itsdangerous==2.2.0
-jeepney==0.7.1
 Jinja2==3.1.4
-jmespath==1.0.1
-keyring==23.5.0
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-Mako==1.3.6
-markdown-it-py==3.0.0
+Mako==1.3.8
 MarkupSafe==3.0.2
-mdurl==0.1.2
-more-itertools==8.10.0
-mysql-connector-python==9.1.0
-netifaces==0.11.0
-oauthlib==3.2.0
-olefile==0.46
-packaging==24.1
+packaging==24.2
 pillow==11.0.0
-pip-tools==7.4.1
-pip-upgrader==1.4.15
 pluggy==1.5.0
-pyasn1==0.4.8
-Pygments==2.18.0
-PyGObject==3.42.1
-pyinotify==0.9.6
-PyJWT==2.3.0
+pycparser==2.22
 PyMySQL==1.1.1
-pyOpenSSL==21.0.0
-pyparsing==2.4.7
-pyproject_hooks==1.2.0
-PySocks==1.7.1
 pytest==8.3.4
-python-apt==2.4.0+ubuntu3
-python-dateutil==2.9.0.post0
-python-slugify==8.0.4
-pytz==2022.1
-PyYAML==5.4.1
-requests==2.32.3
-requests-toolbelt==0.9.1
-rich==13.9.4
-roman==3.3
-rsa==4.8
-s3transfer==0.10.4
-SecretStorage==3.3.1
-simplejson==3.17.6
-six==1.16.0
 SQLAlchemy==2.0.36
-sqlparse==0.5.2
-systemd-python==234
-terminaltables==3.1.10
-text-unidecode==1.3
-tomli==2.0.2
-types-python-dateutil==2.9.0.20241003
+tomli==2.2.1
 typing_extensions==4.12.2
-ubuntu-advantage-tools==8001
-ufw==0.36.1
-unattended-upgrades==0.1
-urllib3==1.26.20
-wadllib==1.3.6
-Werkzeug==3.1.2
-zipp==1.0.0
+Werkzeug==3.1.3
