--- a/.gitignore
+++ b/.gitignore
@@ -25,4 +25,9 @@ yarn-error.log*
 
 backend/venv
 backend/__pycache__/
+backend/database/__pycache__/
+backend/endpoints/__pycache__/
+backend/alembic/__pycache__/
+backend/alembic/versions/__pycache__/
 
+colorvariantgeneratorlaptop.pem
