--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,7 @@
 alembic==1.14.0
 blinker==1.9.0
+boto3==1.35.90
+botocore==1.35.90
 cffi==1.17.1
 click==8.1.7
 cryptography==44.0.0
@@ -13,6 +15,7 @@ greenlet==3.1.1
 iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
+jmespath==1.0.1
 Mako==1.3.8
 MarkupSafe==3.0.2
 packaging==24.2
@@ -21,7 +24,12 @@ pluggy==1.5.0
 pycparser==2.22
 PyMySQL==1.1.1
 pytest==8.3.4
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+s3transfer==0.10.4
+six==1.17.0
 SQLAlchemy==2.0.36
 tomli==2.2.1
 typing_extensions==4.12.2
+urllib3==2.3.0
 Werkzeug==3.1.3
