--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,12 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "js-cookie": "^3.0.5",
+    "package.json": "^2.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.25.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
